--- a/ReactDine/src/menu.css
+++ b/ReactDine/src/menu.css
@@ -35,7 +35,7 @@
     cursor: pointer;
   }
   
-  .addToCartBttn {
+  .addToCartButton {
     background-color: transparent;
     border: 2px solid rgb(19, 19, 19);
     min-width: 100px;
