--- a/ReactDine/src/components/navbar.css
+++ b/ReactDine/src/components/navbar.css
@@ -1,21 +1,30 @@
 .navbar {
-  width: 100%;
-  height: 80px;
-  background-color: rgb(37, 16, 226);
+  background-color: #3498db;
+  padding: 15px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+  height: 80px;
+}
+
+.title h1 {
+  color: white;
+  margin: 0;
 }
 
 .links {
-  margin-right: 50px;
   display: flex;
   align-items: center;
 }
 
 .links a {
-  text-decoration: none;
   color: white;
-  margin-left: 20px;
-  font-size: 25px;
+  text-decoration: none;
+  font-size: 18px;
+  margin: 0 15px;
+  transition: color 0.3s ease-in-out;
+}
+
+.links a:hover {
+  color: #000000;
 }
