--- a/ReactDine/src/pages/menu.css
+++ b/ReactDine/src/pages/menu.css
@@ -1,4 +1,4 @@
-.menu {
+.menuTitle {
   margin-top: 100px;
   text-align: center;
   font-size: 20px;
@@ -16,7 +16,7 @@
 .item {
   border-radius: 8px;
   width: 300px;
-  height: 350px;
+  height: 450px;
   margin: 20px;
   display: flex;
   flex-direction: column;
@@ -30,13 +30,32 @@
 
 .item img {
   width: 100%;
-  height: auto;
+  height: 100%; 
+  object-fit: cover; 
   border-radius: 8px;
   margin-bottom: 10px;
 }
 
 .item .description {
   text-align: center;
+}
+
+.item .description p:first-child {
+  font-size: 18px;
+  color: #000000;
+  font-family: "Arial", sans-serif; 
+}
+
+.item .description p:last-child {
+  font-size: 12px;
+  color: #000000;
+  font-family: "Times New Roman", serif;
+  font-weight: normal; 
+}
+
+.item .price {
+  font-size: 16px;
+  margin-top: 10px;
 }
 
 .item:hover {
